--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
+    "mongoose": "^5.12.8",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
