--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production & nodemon server.js"
+    "start:prod": "SET NODE_ENV=production & nodemon server.js",
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,9 @@
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.5.3",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
