--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "start:dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production & nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "kill": "kill -9 $(lsof -i :3000) &>/dev/null | exit 0"
   },
   "keywords": [],
   "author": "",
@@ -18,12 +19,17 @@
     "cross-env": "^7.0.3",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
     "slugify": "^1.5.3",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
